tests/sksl/errors/PixelFormatMissing.glsl
### Compilation failed:

error: 5: storage texture parameters must specify a pixel format layout-qualifier
void takes_any_pixel_format(readonly  texture2D tex) {}
                            ^^^^^^^^^^^^^^^^^^^^^^^
error: 6: storage texture parameters must specify a pixel format layout-qualifier
void takes_any_pixel_format(writeonly texture2D tex) {}
                            ^^^^^^^^^^^^^^^^^^^^^^^
2 errors
